Ajusted README.md and Swagger files
